-
Bug
-
Resolution: Done
-
P2: Important
-
5.6.0 Alpha
-
None
Example on how to reproduce the bug with examples/widgets/mainwindows/mainwindow:
- Select the option "Groupped Dragging" from the "Main window" menu
- Drag and drop dock widget so there are at least three of them in the same group of tabs (for example red, black, and green)
- Drag the tab bar of one of them outside to make it floating (for example black)
- Drag away the group of two remaining tabs to make them floating
- Drack back the floating-alone (black) dock widget somewhere back inside the main window.
=> The black dock widget is tabbed with the other instead of being
Another issue: If you have a smal floating tab windows, and will drag one of the tab out and dock it in the mainwindow so it has a different size, you will see a glitch in the tab bar of the floating tab window when the dock widget animates.
Both issues have the same root cause: The dock widget is still in the layout.
For Gerrit Dashboard: QTBUG-47209 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
120813,3 | QMainWindow: Remove dockwidgets from the floating tabs when plugging | dev | qt/qtbase | Status: MERGED | +2 | 0 |